# semanticsmith

./: .gitignore  LICENSE  PolText_Abstract.txt  README.md  SWTestTweetAnalyzer.ipynb  SemanticSmithWatermanBasic.py  SemanticSmithWatermanTest.ipynb  SmithWatermanBasic.py  TestSubstitutionMatrixCreator.ipynb  Untitled.ipynb  tweetsim.R  ~$top_example_tweets.xlsx
.github/: copilot-instructions.md
csrc/: ssw_core.c  test_ssw_core.c
data/: SSWTestTweetSubsetter.R
legacy/: SemanticSmithWatermanBasic.py  top_example_tweets.xlsx
legacy/testAnalysis/: SWTestTweetAnalyzer.ipynb
legacy/text-paraphrase-detection-paper/: New_Draft.tex  samplebody-conf.tex  sigproc.bib  tcilatex.tex
python/: .gitignore
python/docs/: getting-started.md
python/src/semanticsmith/: _fallback.py  (+3 more)
r/: DESCRIPTION  NAMESPACE
r/R/: align.R  similarity.R  viz.R
r/vignettes/: getting-started.Rmd
semanticsmith-py/: pyproject.toml  setup.py
semanticsmith-py/docs/: getting-started.md
semanticsmith-py/src/semanticsmith/: __init__.py  _core.pyx  viz.py
semanticsmith-py/tests/: test_align.py
semanticsmith-r/: NAMESPACE
semanticsmith-r/R/: RcppExports.R
semanticsmith-r/docs/: getting-started.html  getting-started.md
semanticsmith-r/src/: Makevars  RcppExports.cpp  ssw_core.h  ssw_rcpp.cpp
semanticsmith-r/tests/: testthat.R
semanticsmith-r/vignettes/: getting-started.Rmd
testAnalysis/: SWTestTweetAnalyzer.ipynb  congresstweets.dict  congresstweets.index
text-paraphrase-detection-paper/: sample-sigconf.tex  samplebody-conf.tex  sigproc.bib
v2/: reimplementation.ipynb
(+13 files in other folders)
